--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@fortawesome/vue-fontawesome": "0.0.22",
     "axios": "^0.15.3",
+    "bootstrap-vue": "^2.0.0-rc.2",
     "core-js": "^2.5.3",
     "font-awesome": "^4.7.0",
     "toastr": "^2.1.4",
