--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.15.3",
     "bootstrap-vue": "^2.0.0-rc.2",
     "core-js": "^2.5.3",
+    "firebase": "^4.12.1",
     "font-awesome": "^4.7.0",
     "mongodb": "^3.0.5",
     "toastr": "^2.1.4",
@@ -27,6 +28,7 @@
     "vue-multiselect": "^2.0.8",
     "vue-router": "^2.8.1",
     "vue-server-renderer": "^2.5.13",
+    "vue-spinner-component": "^1.0.5",
     "vue-template-compiler": "^2.5.13",
     "vuex": "^2.5.0",
     "vuex-router-sync": "^4.3.2"
